# compiler

./: README.md
compiler_project2/: CMakeLists.txt  bup  genCode.c  lexer.c  lexer.lex  main.c  makefile  parser.c  parser.output  parser.y  start_tests.sh  start_tests_2.sh  symbolTable.c  tree.c
compiler_project2/header_files/: def.h  genCode.h  parser.h  symbolTable.h
compiler_project2/output/: code.txt  code_extnd.txt  code_ver.txt
compiler_project2/pcode_test/: pcode_01.txt  pcode_02.txt  pcode_03.txt  pcode_04.txt  pcode_05.txt  pcode_06.txt  pcode_07.txt  pcode_08.txt  pcode_09.txt  pcode_11.txt  pcode_12.txt  pcode_13.txt  pcode_14.txt  pcode_15.txt  pcode_16.txt  pcode_17.txt  pcode_18.txt  pcode_19.txt  pcode_20.txt  pcode_21.txt  pcode_22.txt  pcode_23.txt  pcode_25.txt  pcode_26.txt  pcode_27.txt  pcode_28.txt  pcode_29.txt  pcode_30.txt  pcode_31.txt  pcode_32.txt  pcode_33.txt  pcode_34.txt  pcode_35.txt  pcode_36.txt  pcode_37.txt  pcode_39.txt  pcode_40.txt  pcode_42.txt  pcode_43.txt  pcode_44.txt  (+26 more)
compiler_project2/tentativi/: SCELTEPROG.txt  TODO  makefile  parser.y
compiler_project2/test_scripts/: fill_script.sh  make_scripts.sh  prova4_input.sh  prova_input.txt  script10.sh  script11.sh  script12.sh  script15.sh  script16.sh  script17.sh  script18.sh  script2.sh  script20.sh  script21.sh  script22.sh  script23.sh  script24.sh  script26.sh  script3.sh  script30.sh  script31.sh  script33.sh  script35.sh  script36.sh  script38.sh  script41.sh  script44.sh  script46.sh  script47.sh  script48.sh  script50.sh  script51.sh  script52.sh  script53.sh  (+17 more)
(+31 files in other folders)
